--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,5 +17,7 @@ layout: default
     Tags: {{ page.tags }}
   </div>
 
-  {% include disqus.html %}
+<!--   <div class="comments">
+    {% include disqus.html disqus_identifier=page.disqus_identifier %}
+  </div> -->
 </article>
